@@ -22,7 +22,9 @@
 """TMDA local mail delivery."""
 
 
+import fcntl
 import os
+import re
 import signal
 import socket
 import stat
@@ -37,6 +39,16 @@ def alarm_handler(signum, frame):
     """Handle an alarm."""
     print 'Signal handler called with signal', signum
     raise IOError, "Couldn't open device!"
+
+
+def lock_file(fp):
+    """Do fcntl file locking."""
+    fcntl.flock(fp.fileno(), fcntl.LOCK_EX)
+
+
+def unlock_file(fp):
+    """Do fcntl file unlocking."""
+    fcntl.flock(fp.fileno(), fcntl.LOCK_UN)
 
 
 class Deliver:
@@ -105,13 +117,24 @@ class Deliver:
         elif type == 'forward':
             self.__deliver_forward(self.headers, self.body, dest)
         elif type == 'mbox':
-            self.__deliver_mbox(self.message, dest)
-        elif type == 'maildir':
-            if os.path.exists(dest):
-                self.__deliver_maildir(self.message, dest)
-            else:
+            # Ensure destination path exists.
+            if not os.path.exists(dest):
                 raise Errors.DeliveryError, \
                       'Destination "%s" does not exist!' % dest
+            # Refuse to deliver to an mbox if it's a symlink, to
+            # prevent symlink attacks.
+            elif os.path.islink(dest):
+                raise Errors.DeliveryError, \
+                      'Destination "%s" is a symlink!' % dest
+            else:
+                self.__deliver_mbox(self.message, dest)
+        elif type == 'maildir':
+            # Ensure destination path exists.
+            if not os.path.exists(dest):
+                raise Errors.DeliveryError, \
+                      'Destination "%s" does not exist!' % dest
+            else:
+                self.__deliver_maildir(self.message, dest)
 
     def __deliver_program(self, message, program):
         """Deliver message to /bin/sh -c program."""
@@ -122,9 +145,73 @@ class Deliver:
         Util.sendmail(headers, body, address, self.env_sender)
         
     def __deliver_mbox(self, message, mbox):
-        """ """
-        raise Errors.DeliveryError, \
-              'mbox delivery not yet implemented!'
+        """Reliably deliver a mail message into an mboxrd-format mbox file.
+
+        See <URL:http://www.qmail.org/man/man5/mbox.html>
+        
+        Based on code from getmail
+        <URL:http://www.qcc.sk.ca/~charlesc/software/getmail-2.0/>
+        Copyright (C) 2001 Charles Cazabon, and licensed under the GNU
+        General Public License version 2.
+        """
+        # Construct a UUCP-style From_ line, e.g:
+        # From johndoe@nightshade.la.mastaler.com Thu Feb 28 20:16:35 2002
+        #
+        ufline = 'From %s %s\n' % (self.env_sender,
+                                   time.asctime(time.gmtime(time.time())))
+        try:
+	    # When orig_length is None, we haven't opened the file yet.
+            orig_length = None
+            # Open the mbox file.
+            fp = open(mbox, 'rb+')
+            lock_file(fp)
+            status_old = os.fstat(fp.fileno())
+            # Check if it _is_ an mbox file; mbox files must start
+            # with "From " in their first line, or are 0-length files.
+            fp.seek(0, 0)                # seek to start
+            first_line = fp.readline()
+            if first_line != '' and first_line[:5] != 'From ':
+                # Not an mbox file; abort here.
+                unlock_file(fp)
+                fp.close()
+                raise Errors.DeliveryError, \
+                      'Destination "%s" is not an mbox file!' % mbox
+            fp.seek(0, 2)                # seek to end
+            orig_length = fp.tell()      # save original length
+            fp.write(ufline)
+
+            # Replace lines beginning with "From ", ">From ", ">>From ", ...
+            # with ">From ", ">>From ", ">>>From ", ...
+            escapefrom = re.compile(r'^(?P<gts>\>*)From ', re.MULTILINE)
+            msg = escapefrom.sub('>\g<gts>From ', message)
+            # Add a trailing newline if last line incomplete.
+            if msg[-1] != '\n':
+                msg = msg + '\n'
+
+            # Write the message.
+            fp.write(msg)
+            # Add a trailing blank line.
+            fp.write('\n')
+            fp.flush()
+            os.fsync(fp.fileno())
+            # Unlock and close the file.
+            status_new = os.fstat(fp.fileno())
+            unlock_file(fp)
+            fp.close()
+            # Reset atime.
+            os.utime(mbox, (status_old[stat.ST_ATIME], status_new[stat.ST_MTIME]))
+        except IOError, txt:
+            try:
+                if not fp.closed and not orig_length is None:
+		    # If the file was opened and we know how long it was,
+		    # try to truncate it back to that length.
+                    fp.truncate(orig_length)
+                unlock_file(fp)
+                fp.close()
+            except:
+                pass
+            raise Errors.DeliveryError, \
+                  'Failure writing message to mbox file "%s" (%s)' % (mbox, txt)
 
     def __deliver_maildir(self, message, maildir):
         """Reliably deliver a mail message into a Maildir.
