@@ -1,3 +1,8 @@
+2002-02-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Deliver.py (Deliver.__deliver_mbox): New method to reliably
+	deliver a message into an mboxrd-format mbox.
+
 2002-02-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Deliver.py (Deliver.__deliver_maildir): New method to reliably
